letterspacing correction

--- a/portfolio2.0/css/styles.css
+++ b/portfolio2.0/css/styles.css
@@ -10,4 +10,5 @@ h1 {
 
 p {
     font-size: 1.8rem;
+    letter-spacing: 1rem;
 }
